# phishllm

./: .gitignore  LICENSE  Makefile  PROJECT_REFERENCE.md  README.md  UPDATES.md  VERIFICATION.md  case_study.md  case_study.tex  pyproject.toml  requirements-dev.txt  requirements.txt
artifacts/: case_study.md
configs/candidates/: seed_balanced.json  seed_baseline.json  seed_low_cost.json  seed_no_validation.json  seed_precision_first.json  seed_recall_first.json  seed_robust.json  seed_visual_only.json
configs/schema/: candidate.schema.json
data/: README.txt
docs/: architecture.md  connecting_to_official_repo.md  failure_catalog.md  final_implementation_appendix.tex
prompts/: brand_default_v1.txt  brand_precision_v1.txt  brand_recall_v1.txt  brand_robust_v1.txt  crp_default_v1.txt  crp_precision_v1.txt  crp_recall_v1.txt  crp_robust_v1.txt  meta_search_prompt.txt
slurm/: run_eval.sbatch  run_eval_array.sbatch  run_search.sbatch
src/phishllm_search/: __init__.py  cli.py  dataset.py  genset.py  schema.py
src/phishllm_search/backends/: __init__.py  base.py  mock.py  official.py  replay.py
src/phishllm_search/evaluator/: __init__.py  confusion.py  failures.py  metrics.py  runner.py
src/phishllm_search/reporting/: __init__.py  case_study.py  plots.py  tables.py
src/phishllm_search/search/: __init__.py  loop.py  selector.py  stopping.py
src/phishllm_search/utils/: hashing.py  logging.py
tests/: conftest.py  test_evaluator.py  test_failures.py  test_metrics.py  test_mock_backend.py  test_proposer.py  test_schema.py  test_search_loop.py
(+5 files in other folders)
