[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phishllm-search"
version = "1.0.0"
description = "AI-driven configuration search for PhishLLM-style reference-based phishing detection."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Nazish Baliyan", email = "nazish.baliyan@example.edu" },
]
keywords = ["phishing", "security", "LLM", "evaluator", "configuration-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
]
dependencies = [
    "jsonschema>=4.0,<5.0",
    "numpy>=1.23",
    "pandas>=1.5",
    "matplotlib>=3.5",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.34"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
phishllm-eval = "phishllm_search.cli:eval_main"
phishllm-search = "phishllm_search.cli:search_main"
phishllm-report = "phishllm_search.cli:report_main"
phishllm-genset = "phishllm_search.cli:genset_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
